<resources>
    <string name="app_name">FB Event Sync</string>
    <string name="full_app_name">Event Sync for Facebook</string>
    <string name="account_type" translatable="false">cz.dvratil.fbeventsync</string>
    <string name="cz_dvratil_fbeventsync_preferences" translatable="false">cz.dvratil.fbeventsync_preferences</string>
    <string name="fileprovider_authority" translatable="false">cz.dvratil.fbeventsync.FileProvider</string>
    <string name="facebook_app_id" translatable="false">1775235912769870</string>
    <string name="cfg_prefs_version" translatable="false">prefs_version</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_remove">Remove</string>
    <string name="birthday_event_title">%1$s\'s Birthday</string>
    <string name="main_version_label">Version: %s</string>
    <string name="main_add_account_btn">Add Account</string>
    <string name="main_show_logs_btn">Show Logs</string>
    <string name="main_configure_calendars_btn">Configure Calendars</string>
    <string name="main_configure_sync_btn">Configure Sync Preferences</string>
    <string name="main_configure_misc_btn">Configure Miscellaneous</string>
    <string name="main_sync_now">Sync Now</string>
    <string name="main_sync_in_progress">Sync in progress…</string>
    <string name="main_fbpage_link">Follow our &lt;a href=https://www.facebook.com/294071114749578>Facebook page&lt;/a> to get the latest news and information about updates!</string>
    <string name="nav_sync_all">Sync All</string>
    <string name="nav_configure_calendars">Configure Calendars</string>
    <string name="nav_configure_sync">Configure Sync</string>
    <string name="nav_sync_logs">Sync Logs</string>
    <string name="nav_report_bug">Report Bug</string>
    <string name="nav_faq">FAQ</string>
    <string name="nav_about">About</string>
    <string name="nav_homepage">Homepage</string>
    <string name="perms_activity_title">Permissions Request</string>
    <string name="log_activity_title">Log View</string>
    <string name="log_clear_log_action">Clear Log</string>
    <string name="log_send_to_dev_action">Send to Developer</string>
    <string name="log_send_email_action">Send Email&#8230;</string>
    <string name="log_email_template">[Please, describe your problem here, preferably in English]</string>
    <string name="log_error_sending_log_toast">Failed to send logs: Cannot read the log file</string>
    <string name="auth_activity_title">Authenticate with Facebook</string>
    <string name="auth_account_creation_error_toast">Error during authentication</string>
    <string name="auth_account_creation_success_toast">Account added</string>
    <string name="auth_rate_limiting_toast">Facebook API is currently experiencing problems. Please try again later.</string>
    <string name="auth_progress_authenticating_with_fb">Authenticating with Facebook&#8230;</string>
    <string name="auth_progress_retrieving_calendars">Retrieving calendars&#8230;</string>
    <string name="auth_progress_retrieving_userinfo">Retrieving user info&#8230;</string>
    <string name="auth_calendar_uri_error_toast">Failed to retrieve calendar URI</string>
    <string name="auth_remove_account_title">Remove account %s?</string>
    <string name="auth_remove_account_text">The account will only be removed from this app, your Facebook account and other apps will remain unaffected.</string>
    <string name="about_activity_title">About</string>
    <string name="pref_about_rate_app" translatable="false">pref_about_rate_app</string>
    <string name="pref_about_rate_app_title">Rate the app</string>
    <string name="pref_about_privacy" translatable="false">pref_about_privacy</string>
    <string name="pref_about_privacy_title">Privacy</string>
    <string name="pref_about_license" translatable="false">pref_about_license</string>
    <string name="pref_about_license_title">License</string>
    <string name="pref_about_license_summary">GNU General Public License v3.0</string>
    <string name="pref_about_version" translatable="false">pref_about_version</string>
    <string name="pref_about_version_title">Version</string>
    <string name="calendar_not_responded_title">Events I have not Responded To</string>
    <string name="calendar_declined_title">Events I\'m not Attending</string>
    <string name="calendar_tentative_title">Events I May Be Attending</string>
    <string name="calendar_attending_title">Events I\'m Attending</string>
    <string name="calendar_birthday_title">Friends\' Birthdays</string>
    <string name="sync_ntf_needs_reauthentication_title">Event Sync for Facebook needs to log in</string>
    <string name="sync_ntf_needs_reauthentication_description">Tap here to re-authenticate with Facebook</string>
    <string name="pref_activity_title">Settings</string>
    <string name="pref_sync_settings" translatable="false">pref_sync_settings</string>
    <string name="pref_sync_settings_title">Sync Settings</string>
    <string name="pref_sync_settings_summary">Configure how often and when to sync events.</string>
    <string name="pref_sync_frequency" translatable="false">pref_sync_frequency</string>
    <string name="pref_sync_frequency_title">Sync Frequency</string>
    <string name="pref_sync_frequency_summary">How often should your Facebook events be synced?</string>
    <string name="pref_sync_frequency_default_value" translatable="false">@string/pref_sync_frequency_1hour_value</string>
    <string name="pref_sync_fblink" translatable="false">pref_sync_fblink</string>
    <string name="pref_sync_fblink_title">Add link to Facebook</string>
    <string name="pref_sync_fblink_summary">Add a link to Facebook to event descriptions.</string>
    <string name="pref_language" translatable="false">pref_language</string>
    <string name="pref_language_title">Language</string>
    <string name="pref_language_summary">Language for birthdays and events</string>
    <string name="pref_language_default_value" translatable="false">device</string>
    <string name="pref_language_default_entry">Device language</string>
    <string-array name="pref_language_entries">
        <item>@string/pref_language_default_entry</item>
    </string-array>
    <string-array name="pref_language_values">
        <item>@string/pref_language_default_value</item>
    </string-array>
    <string name="pref_calendar_settings" translatable="false">pref_calendar_settings</string>
    <string name="pref_calendar_settings_title">Calendars</string>
    <string name="pref_calendar_settings_summary">Set calendars, colors and reminders</string>
    <string name="pref_calendar_attending_enabled" translatable="false">pref_attending_enabled</string>
    <string name="pref_calendar_attending_reminders" translatable="false">pref_attending_reminders</string>
    <string name="pref_calendar_attending_allday_reminders" translatable="false">pref_attending_allday_reminders</string>
    <string name="pref_calendar_attending_color" translatable="false">pref_attending_color</string>
    <string name="pref_calendar_tentative_enabled" translatable="false">pref_tentative_enabled</string>
    <string name="pref_calendar_tentative_reminders" translatable="false">pref_maybe_reminders</string>
    <string name="pref_calendar_tentative_allday_reminders" translatable="false">pref_maybe_allday_reminders</string>
    <string name="pref_calendar_tentative_color" translatable="false">pref_maybe_color</string>
    <string name="pref_calendar_not_responded_enabled" translatable="false">pref_not_responded_enabled</string>
    <string name="pref_calendar_not_responded_reminders" translatable="false">pref_not_responded_reminders</string>
    <string name="pref_calendar_not_responded_allday_reminders" translatable="false">pref_not_responded_allday_reminders</string>
    <string name="pref_calendar_not_responded_color" translatable="false">pref_not_responded_color</string>
    <string name="pref_calendar_declined_enabled" translatable="false">pref_declined_enabled</string>
    <string name="pref_calendar_declined_reminders" translatable="false">pref_declined_reminders</string>
    <string name="pref_calendar_declined_allday_reminders" translatable="false">pref_declined_allday_reminders</string>
    <string name="pref_calendar_declined_color" translatable="false">pref_declined_color</string>
    <string name="pref_calendar_birthday_enabled" translatable="false">pref_birthday_enabled</string>
    <string name="pref_calendar_birthday_allday_reminders" translatable="false">pref_birthday_allday_reminders</string>
    <string name="pref_calendar_birthday_color" translatable="false">pref_birthday_color</string>
    <string name="pref_calendar_enabled_title">Enabled</string>
    <string name="pref_calendar_reminders_title">Reminders</string>
    <string name="pref_calendar_allday_reminders_title">All-day Events Reminders</string>
    <string name="pref_calendar_color_title">Color</string>
    <string name="color_dlg_title">Choose Color</string>
    <string name="color_dlg_save_btn_title">Save</string>
    <string name="color_dlg_close_btn_title">Close</string>
    <string name="cfg_last_sync_time" translatable="false">lastSyncTime</string>
    <string name="cfg_syncs_per_hour" translatable="false">syncPerHour</string>
    <string name="cfg_last_version" translatable="false">lastVersion</string>
    <plurals name="pref_reminder_allday_description">
        <item quantity="one">%d day before at %s</item>
        <item quantity="other">%d days before at %s</item>
    </plurals>
    <string name="allday_reminder_daysBeforeAt">days before at</string>
    <string-array name="pref_allday_reminders_default_value">
        <item>720,true</item>
    </string-array>
    <plurals name="pref_reminder_anyminutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <string name="pref_reminder_0minutes_entry">0 minutes</string>
    <string name="pref_reminder_0minutes_value" translatable="false">0</string>
    <string name="pref_reminder_5minutes_entry">5 minutes</string>
    <string name="pref_reminder_5minutes_value" translatable="false">5</string>
    <string name="pref_reminder_10minutes_entry">10 minutes</string>
    <string name="pref_reminder_10minutes_value" translatable="false">10</string>
    <string name="pref_reminder_15minutes_entry">15 minutes</string>
    <string name="pref_reminder_15minutes_value" translatable="false">15</string>
    <string name="pref_reminder_20minutes_entry">20 minutes</string>
    <string name="pref_reminder_20minutes_value" translatable="false">20</string>
    <string name="pref_reminder_30minutes_entry">30 minutes</string>
    <string name="pref_reminder_30minutes_value" translatable="false">30</string>
    <string name="pref_reminder_1hour_entry">1 hour</string>
    <string name="pref_reminder_1hour_value" translatable="false">60</string>
    <string name="pref_reminder_2hours_entry">2 hours</string>
    <string name="pref_reminder_2hours_value" translatable="false">120</string>
    <string name="pref_reminder_12hours_entry">12 hours</string>
    <string name="pref_reminder_12hours_value" translatable="false">720</string>
    <string name="pref_reminder_24hours_entry">24 hours</string>
    <string name="pref_reminder_24hours_value" translatable="false">1440</string>
    <string name="pref_reminder_36hours_entry">36 hours</string>
    <string name="pref_reminder_36hours_value" translatable="false">2160</string>
    <string name="pref_reminder_2days_entry">2 days</string>
    <string name="pref_reminder_2days_value" translatable="false">2880</string>
    <string name="pref_reminder_1week_entry">1 week</string>
    <string name="pref_reminder_1week_value" translatable="false">10080</string>
    <string name="pref_general_settings_title">General</string>
</resources>