<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_general_settings_title" />

    <PreferenceScreen
        android:key="@string/pref_calendar_settings"
        android:title="@string/pref_calendar_settings_title"
        android:summary="@string/pref_calendar_settings_summary">
        <intent
            android:action="cz.dvratil.fbeventsync.Settings.CONFIGURE_CALENDARS"
            android:targetClass="cz.dvratil.fbeventsync.SettingsActivity"
            android:targetPackage="cz.dvratil.fbeventsync" />
    </PreferenceScreen>

    <PreferenceScreen
        android:key="@string/pref_sync_settings"
        android:title="@string/pref_sync_settings_title"
        android:summary="@string/pref_sync_settings_summary">
        <intent
            android:action="cz.dvratil.fbeventsync.Settings.CONFIGURE_SYNC"
            android:targetClass="cz.dvratil.fbeventsync.SettingsActivity"
            android:targetPackage="cz.dvratil.fbeventsync" />
    </PreferenceScreen>

    <PreferenceScreen
        android:key="@string/pref_misc_settings"
        android:title="@string/pref_misc_settings_title">
        <intent
            android:action="cz.dvratil.fbeventsync.Settings.CONFIGURE_MISC"
            android:targetClass="cz.dvratil.fbeventsync.SettingsActivity"
            android:targetPackage="cz.dvratil.fbeventsync" />
    </PreferenceScreen>
</PreferenceScreen>

